<resources>
    <string name="app_name">ChatApplication</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message_button">Send message button</string>
    <string name="this_is_sent_message">This is sent message</string>
    <string name="this_is_receive_message">This is receive message</string>
</resources>